rtp: Fix some memory leaks in usage of gst_pad_get_current_caps()

https://bugzilla.gnome.org/show_bug.cgi?id=775071