gst/rtp/gstrtph264depay.c
@@ -432,6 +432,7 @@ gst_rtp_h264_set_src_caps (GstRtpH264Depay * rtph264depay)
 
       gst_caps_unref (tmp_caps);
     }
+    gst_caps_unref (old_caps);
   } else {
     res =
         gst_pad_set_caps (GST_RTP_BASE_DEPAYLOAD_SRCPAD (rtph264depay),
